...
                            android:layout_marginTop="2dp"
                            android:text="@string/photo_resolution_sub"
                            android:textAppearance="@style/TextAppearance.HD.ListSub" />
                    </LinearLayout>

                    <TextView
                            android:id="@+id/tvResolutionValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/highest"
                        android:textAppearance="@style/TextAppearance.HD.ListValue" />
                </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/format"
                        android:textAppearance="@style/TextAppearance.HD.ListTitle" />

                    <TextView
                            android:id="@+id/tvFormatValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/format_value"
                        android:textAppearance="@style/TextAppearance.HD.ListValue" />
                </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/video"
                        android:textAppearance="@style/TextAppearance.HD.ListTitle" />

                    <TextView
                            android:id="@+id/tvVideoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/video_value"
                        android:textAppearance="@style/TextAppearance.HD.ListValue" />
                </LinearLayout>
...
