...
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@drawable/bg_vf_chip_12"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:id="@+id/btnQuality"
                android:text="@string/video_4k60"
                android:textAppearance="@style/TextAppearance.HD.Mono.Chip"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
...
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <FrameLayout
                    android:id="@+id/btnRecord"
                    android:layout_width="@dimen/shutter_size"
                    android:layout_height="@dimen/shutter_size"
                    android:background="@drawable/bg_shutter_ring_video"
                    android:contentDescription="@string/cd_record">

                    <View
...
